--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,34 @@
     </div>
     {{ content }}
   </div>
+
+  <footer>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between; padding-top: 2em; margin-left: auto; margin-right: auto; ">
+          <div style="flex: 1; min-width: 200px; margin: 20px;">
+              <h4 style="margin-top: 0; margin-bottom: 10px; font-size: 16px; ">
+                  {{page.contact_header}}
+              </h4>
+              <ul style="list-style: none; padding: 0; margin: 0;">
+                  <li style="margin-bottom: 5px;">{{page.contact_email}}: <a href="mailto:info@keepandroidopen.org" style="text-decoration: none;">info@keepandroidopen.org</a></li>
+              </ul>
+              <ul style="list-style: none; padding: 0; margin: 0;">
+                  <li style="margin-bottom: 5px;">{{page.site_problems_header}}: <a href="https://github.com/keepandroidopen/keepandroidopen.github.io/issues" style="text-decoration: none;">{{page.site_report_issues}}</a></li>
+              </ul>
+          </div>
+          <div style="flex: 3; min-width: 300px; margin: 20px;">
+              <p>{{page.site_disclaimer}}</p>
+              <p>{{page.site_privacy}}</p>
+              <p>
+                  {{page.site_copyright}} <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal</a><img src="/img/cc.svg" alt="CC0 logo" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="/img/zero.svg" alt="CC0 zero logo" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+              </p>
+          </div>
+          <div style="flex: 1; min-width: 200px; margin: 20px; text-align: center; justify-content: center; align-items: center;">
+              <div class="outerlync" style="margin-top: 0; margin-bottom: 10px; font-size: 20px;">
+                  <img class="innerlync" alt="Altered Deal Logo" src="/img/altered-deal.png"  style="width: 150px; margin-left: auto; margin-right: auto; text-align: center; justify-content: center; align-items: center; display: flex;"/>
+              </div>
+          </div>
+      </div>
+  </footer>
 </body>
 
 </html>
