Update banner to not flash upon first load

--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -232,7 +232,7 @@ const languageEntries = Object.entries(languages);
 </head>
 <body>
   <div class="alarming-banner">
-    {lockdown_banner ?? "LOCKDOWN"}<br/><span id="countdown"></span>
+    {lockdown_banner ?? "LOCKDOWN"}<br/><span id="countdown">&nbsp;</span>
   </div>
   <header>
     <h1>{title}<ThemeToggle /></h1>    
