--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -38,9 +38,8 @@ const languageEntries = Object.entries(languages);
   lang={lang} 
   description={description} 
 >
-  <div class="alarming-banner">
-  {lockdown_banner ?? "LOCKDOWN"}<br/><span id="countdown">&nbsp;</span>
-  </div>
+  <div id="kao-banner"></div>
+  <script is:inline src="/banner.js?id=kao-banner&size=normal&hidebutton=off"></script>
   <header>
     <span class="header-icons"><a href="https://techhub.social/@keepandroidopen" class="header-icon-link" aria-label="Mastodon" title="Mastodon" rel="me" target="_blank"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M16.45 17.77c2.77-.33 5.18-2.03 5.49-3.58.47-2.45.44-5.97.44-5.97 0-4.77-3.15-6.17-3.15-6.17-1.58-.72-4.3-1.03-7.13-1.05h-.07c-2.83.02-5.55.33-7.13 1.05 0 0-3.14 1.4-3.14 6.17v.91c-.01.88-.02 1.86 0 2.88.12 4.67.87 9.27 5.2 10.4 2 .53 3.72.64 5.1.57 2.51-.14 3.92-.9 3.92-.9l-.08-1.8s-1.8.56-3.8.5c-2-.08-4.1-.22-4.43-2.66a4.97 4.97 0 0 1-.04-.68s1.96.48 4.44.59c1.51.07 2.94-.09 4.38-.26Zm2.22-3.4h-2.3v-5.6c0-1.19-.5-1.79-1.5-1.79-1.1 0-1.66.71-1.66 2.12v3.07h-2.3V9.1c0-1.4-.55-2.12-1.65-2.12-1 0-1.5.6-1.5 1.78v5.61h-2.3V8.6c0-1.18.3-2.12.9-2.81a3.17 3.17 0 0 1 2.47-1.05c1.18 0 2.07.45 2.66 1.35l.57.96.58-.96a2.97 2.97 0 0 1 2.66-1.35c1.01 0 1.83.36 2.46 1.05.6.7.9 1.63.9 2.81v5.78Z"></path></svg></a><ThemeToggle /></span>
     <h1>{title}</h1>
@@ -66,6 +65,7 @@ const languageEntries = Object.entries(languages);
           <li style="list-style: none; margin-bottom: 5px;">{contact_email}: <a href="mailto:info@keepandroidopen.org" style="text-decoration: none;">info@keepandroidopen.org</a></li>
           <li style="list-style: none; margin-bottom: 5px;">Mastodon: <a target="_blank" href="https://techhub.social/@keepandroidopen" style="text-decoration: none;">@keepandroidopen@techhub.social</a></li>
           <li style="list-style: none; margin-bottom: 5px;">{site_problems_header}: <a target="_blank" href="https://github.com/keepandroidopen/keepandroidopen.github.io/issues" style="text-decoration: none;">{site_report_issues}</a></li>
+          <li style="list-style: none; margin-bottom: 5px;"><a href="/banner" style="text-decoration: none;">Add countdown banner to your site</a></li>
         </ul>
       </div>
       <div style="flex: 3; min-width: 280px; margin: 20px;">
@@ -82,122 +82,5 @@ const languageEntries = Object.entries(languages);
       </div>
     </div>
   </footer>
-  <script>
-    // Set the date we're counting down to
-    const countDownDate = new Date("Sep 1, 2026 00:00:00").getTime();
 
-    const locale = document.documentElement.lang; // navigator.language; // Detects browser language (e.g., 'en-US');
-
-    // Use Intl.RelativeTimeFormat for localized abbreviations
-    // 'narrow' style gives us 'd', 'h', 'm', 's' in most locales
-    const formatter = new Intl.RelativeTimeFormat(locale, { style: 'narrow' });
-
-    const prefix = new Array(4);
-    const suffix = new Array(4);
-
-    function getOffset(unit) {
-      switch (unit) {
-        case 'day':
-          return 0;
-        case 'hour':
-          return 1;
-        case 'minute':
-          return 2;
-        case 'second':
-          return 3;
-      }
-    }
-
-    function extractCommon(p, c, reverse) {
-      let s = 0;
-      let w = 0;
-      let i = reverse ? p.length - 1 : 0;
-      let j = reverse ? c.length - 1 : 0;
-      const pEnd = reverse ? 0 : p.length;
-      const cEnd = reverse ? 0 : c.length;
-      let chr;
-      while ((reverse ? i >= pEnd : i < pEnd) && (reverse ? j >= cEnd : j < cEnd) && (chr = p[reverse ? i-- : i++]) === c[reverse ? j-- : j++]) {
-        w = chr === ' ' ? w + 1 : 0;
-        s++;
-      }
-      return s - w;
-    }
-
-    function cacheFormattingInfo(value, unit) {
-      // FormatToParts lets us extract just the unit identifier
-      const p = formatter.formatToParts(value, unit);
-      if (!p.length) return;
-      const c = formatter.formatToParts(-value, unit);
-
-      const offset = getOffset(unit);
-      if (p[0].type === 'literal' && (!c.length || c[0].type !== 'literal' || !c[0].value.endsWith(p[0].value))) {
-        prefix[offset] = p[0].value.length;
-      }
-      if (p[p.length - 1].type === 'literal') {
-        if (!c.length || c[c.length - 1].type !== 'literal') {
-          suffix[offset] = p[p.length - 1].value.length;
-        } else if (!c[c.length - 1].value.startsWith(p[p.length - 1].value)) {
-          suffix[offset] = p[p.length - 1].value.length - extractCommon(p[p.length - 1].value, c[c.length - 1].value, false);
-        }
-      }
-    }
-
-    cacheFormattingInfo(1, 'day');
-    cacheFormattingInfo(2, 'hour');
-    cacheFormattingInfo(3, 'minute');
-    cacheFormattingInfo(4, 'second');
-
-    /**
-    * Localizes a duration based on the browser's language settings.
-    * @param {number} value - The numerical value (e.g., 5)
-    * @param {string} unit - The unit ('day', 'hour', 'minute', 'second')
-    */
-    function getLocalizedUnit(value, unit, trimConjunction, trimSuffix) {
-      const offset = getOffset(unit);
-      const string = formatter.format(value, unit);
-      const p = prefix[offset];
-      const s = suffix[offset];
-      return string.slice(trimConjunction && p || p == 1 && string[0] === '+' ? prefix[offset] : 0, trimSuffix && s ? -suffix[offset] : string.length);
-    }
-
-    const remaining = new Array(7);
-    const separator = ' ';
-    var timer = null;
-
-    function updateBanner() {
-      // Get today's date and time
-      var now = new Date().getTime();
-
-      // Find the distance between now and the count down date
-      var distance = countDownDate - now;
-
-      // Time calculations for days, hours, minutes and seconds
-      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-      var parts = 0;
-      remaining[0] = days > 0 ? getLocalizedUnit(days, 'day', parts++, true) : null;
-      remaining[1] = parts ? separator : null;
-      remaining[2] = parts || hours > 0 ? getLocalizedUnit(hours, 'hour', parts++, true) : null;
-      remaining[3] = parts ? separator : null;
-      remaining[4] = parts || minutes > 0 ? getLocalizedUnit(minutes, 'minute', parts++, true) : null;
-      remaining[5] = parts ? separator : null;
-      remaining[6] = getLocalizedUnit(seconds, 'second', parts++, false);
-
-      // Display the result in the element with id="countdown"
-      document.getElementById("countdown").textContent = remaining.join('');
-
-      // // If the count down is finished, write some text
-      if (distance < 0) {
-        clearInterval(timer);
-      //   document.getElementById("countdown").innerHTML = "EXPIRED";
-      }
-    }
-    
-    // Update the count down every 1 second
-    timer = setInterval(updateBanner, 1000);
-    updateBanner();
-  </script>
 </Base>
